# artm

./: CMakeLists.txt  README.md  setup.py
artm/batch/: __init__.py  hypergraph.py  multimodal.py  unimodal.py
artm/corpora/: __init__.py  base.py  ethnic.py
artm/document/: __init__.py  generic.py  hypergraph.py  multimodal.py  unimodal.py
artm/processors/: base.py  unimodal.py
artm/utils/: __init__.py  batch.py  document.py  input_stream.py  misc.py  streams.py  token.py  vocabulary.py
data/: convert_corpus  convert_phi  convert_vocabulary  parse_corpus  parse_corpus.cfg  print_top  print_top.cfg  process  process.cfg  shrink_corpus  shrink_corpus.cfg
python/: count_distribution.py  parse2plain.py  processor.py  shrink_vocabulary.py
tools/: CMakeLists.txt  convert_corpus.cpp  convert_phi.cpp  convert_vocabulary.cpp  parse_corpus.cpp  print_top.cpp  process.cpp  score_model.cpp  shrink_corpus.cpp
